# wecom_bot

./: .gitignore  CHANGLOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: bot.rs  image.rs  lib.rs  media.rs  message.rs  response.rs  upload.rs
